[project]
name = "JumperGame"
version = "0.0.1"
description = "Tool for checking if all modules, classes, and functions have docstrings"
authors = ["BYUI Student Project"]
license = "MIT"
readme = "README.md"
python = "3.8+"
repository = "https://github.com/Eugenespace/cse210-05.git"
documentation = "https://github.com/Eugenespace/cse210-05"
keywords = ["byui", "byu-idaho", "cse210", "documentation"]
classifiers = ["Topic::Software Development"]

[dependencies]
astroid = "2.6.0"

[dev-dependencies]
black = "19.10b"
pylint = "2.8.3"

[build-system]
requires = ["setuptools", "wheel"]